force-app/main/default/objects/Lead/fields/created_weeknum__c.field-meta.xml
<CustomField>
    <fullName>created_weeknum__c</fullName>
    <formula>&quot;W&quot; + TEXT(IF( 
  CEILING( ( DATEVALUE(CreatedDate) - DATE( YEAR( DATEVALUE(CreatedDate) ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( DATEVALUE(CreatedDate) - DATE( YEAR( DATEVALUE(CreatedDate) ), 1, 1) + 1) / 7)
)) + &quot;-&quot; + TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>Erstelldatum Wochennummer</label>
    <type>Text</type>
</CustomField>