force-app/main/default/objects/Lead/fields/crunchbase__CB_Permalink_TriggerField__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__CB_Permalink_TriggerField__c</fullName>
    <label>CB Permalink (Trigger Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>