force-app/main/default/objects/Lead/fields/crunchbase__Crunchbase_Categories__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Crunchbase_Categories__c</fullName>
    <label>Crunchbase Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>Internet of Things</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Video Games</fullName>
            </value>
            <value>
                <fullName>Bitcoin</fullName>
            </value>
            <value>
                <fullName>Drones</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Enterprise Software</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>