force-app/main/default/objects/Lead/fields/crunchbase__Crunchbase_URL__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Crunchbase_URL__c</fullName>
    <description>This link takes the user to view this company on Crunchbase.com</description>
    <inlineHelpText>This link takes the user to view this company on Crunchbase.com</inlineHelpText>
    <label>Crunchbase URL</label>
    <type>Url</type>
</CustomField>