force-app/main/default/objects/Lead/fields/crunchbase__Date_Crunchbase_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Date_Crunchbase_Last_Update__c</fullName>
    <description>Datetime when this record was last updated with Crunchbase data</description>
    <inlineHelpText>Datetime when this record was last updated with Crunchbase data</inlineHelpText>
    <label>Date Crunchbase Last Update</label>
    <type>DateTime</type>
</CustomField>