force-app/main/default/objects/Lead/fields/crunchbase__Latest_Funding_Round_Date__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Latest_Funding_Round_Date__c</fullName>
    <label>Latest Funding Round Date</label>
    <type>Date</type>
</CustomField>