force-app/main/default/objects/Lead/fields/crunchbase__Latest_Funding_Type_and_Series__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Latest_Funding_Type_and_Series__c</fullName>
    <label>Latest Funding Type and Series</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Angel</fullName>
            </value>
            <value>
                <fullName>Venture</fullName>
            </value>
            <value>
                <fullName>Venture - Series A</fullName>
            </value>
            <value>
                <fullName>Venture - Series B</fullName>
            </value>
            <value>
                <fullName>Venture - Series C</fullName>
            </value>
            <value>
                <fullName>Venture - Series D</fullName>
            </value>
            <value>
                <fullName>Venture - Series E</fullName>
            </value>
            <value>
                <fullName>Venture - Series F</fullName>
            </value>
            <value>
                <fullName>Venture - Series G</fullName>
            </value>
            <value>
                <fullName>Venture - Series H</fullName>
            </value>
            <value>
                <fullName>Venture - Series I</fullName>
            </value>
            <value>
                <fullName>Venture - Series J</fullName>
            </value>
            <value>
                <fullName>Equity Crowdfunding</fullName>
            </value>
            <value>
                <fullName>Product Crowdfunding</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Convertible Note</fullName>
            </value>
            <value>
                <fullName>Debt Financing</fullName>
            </value>
            <value>
                <fullName>Secondary Market</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Post-IPO Equity</fullName>
            </value>
            <value>
                <fullName>Post-IPO Debt</fullName>
            </value>
            <value>
                <fullName>Non-Equity Assistance</fullName>
            </value>
            <value>
                <fullName>Undisclosed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>