force-app/main/default/objects/Lead/fields/crunchbase__Latest_Round_Money_Raised_in_USD__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Latest_Round_Money_Raised_in_USD__c</fullName>
    <label>Latest Round - Money Raised in USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>