force-app/main/default/objects/Lead/fields/crunchbase__Number_of_Acquisitions__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Acquisitions__c</fullName>
    <label>Number of Acquisitions (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>