force-app/main/default/objects/Lead/fields/crunchbase__Number_of_Acquisitions_Formula__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Number_of_Acquisitions_Formula__c</fullName>
    <formula>IF(ISBLANK( crunchbase__Crunchbase_URL__c) , &quot;&quot;, 
IF(ISNULL(crunchbase__Number_of_Acquisitions__c) || crunchbase__Number_of_Acquisitions__c == 0, 
&#39;No Acquisitions Available&#39;, 
HYPERLINK(crunchbase__Crunchbase_URL__c + &#39;/acquisitions&#39;, TEXT(crunchbase__Number_of_Acquisitions__c) + &#39; Acquisitions&#39;)
)
)</formula>
    <label>Number of Acquisitions</label>
    <type>Text</type>
</CustomField>