force-app/main/default/objects/Lead/fields/crunchbase__Uuid__c.field-meta.xml
<CustomField>
    <fullName>crunchbase__Uuid__c</fullName>
    <label>Uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>