force-app/main/default/objects/Lead/fields/Days_in_CallPitchFollowUp__c.field-meta.xml
<CustomField>
    <fullName>Days_in_CallPitchFollowUp__c</fullName>
    <formula>Stage_Tracking_CallPitchFollowUp_out__c - Stage_Tracking_CallPitchFollowUp_in__c + 1</formula>
    <label>Days in Priorisiert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>