force-app/main/default/objects/Lead/fields/Days_in_CallPitchinVorbereitung__c.field-meta.xml
<CustomField>
    <fullName>Days_in_CallPitchinVorbereitung__c</fullName>
    <formula>Stage_Tracking_CallPitchinVorbereitu_out__c - Stage_Tracking_CallPitchinVorbereitun_in__c + 1</formula>
    <label>Days in Call/Pitch in Vorbereitung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>