force-app/main/default/objects/Lead/fields/Days_in_ColdOutreach__c.field-meta.xml
<CustomField>
    <fullName>Days_in_ColdOutreach__c</fullName>
    <formula>Stage_Tracking_ColdOutreach_out__c - Stage_Tracking_ColdOutreach_in__c + 1</formula>
    <label>Days in Cold Outreach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>