force-app/main/default/objects/Lead/fields/Days_in_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Dropped__c</fullName>
    <formula>Stage_Tracking_Dropped_out__c - Stage_Tracking_Dropped_in__c + 1</formula>
    <label>Days in Dropped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>