force-app/main/default/objects/Lead/fields/Days_in_Importiert__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Importiert__c</fullName>
    <formula>Stage_Tracking_Importiert_out__c - Stage_Tracking_Importiert_in__c + 1</formula>
    <label>Days in Importiert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>