force-app/main/default/objects/Lead/fields/Days_in_In_Kontakt__c.field-meta.xml
<CustomField>
    <fullName>Days_in_In_Kontakt__c</fullName>
    <formula>Stage_Tracking_In_Kontakt_out__c - Stage_Tracking_In_Kontakt_in__c + 1</formula>
    <label>Days in In_Kontakt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>