force-app/main/default/objects/Lead/fields/Days_in_Konvertiert__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Konvertiert__c</fullName>
    <formula>Stage_Tracking_Konvertiert_out__c - Stage_Tracking_Konvertiert_in__c + 1</formula>
    <label>Days in Konvertiert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>