force-app/main/default/objects/Lead/fields/Days_in_Postponed__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Postponed__c</fullName>
    <formula>Stage_Tracking_Postponed_out__c - Stage_Tracking_Postponed_in__c + 1</formula>
    <label>Days in Postponed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>