force-app/main/default/objects/Lead/fields/Dropped_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Reason__c</fullName>
    <label>Dropped Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keine Entscheidung</fullName>
            </value>
            <value>
                <fullName>Kein Fit</fullName>
            </value>
            <value>
                <fullName>Kein Interesse</fullName>
            </value>
            <value>
                <fullName>Keine Antwort</fullName>
            </value>
            <value>
                <fullName>Kein Budget</fullName>
            </value>
            <value>
                <fullName>Falscher Ansprechpartner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Is not the decision maker</fullName>
                <isActive>false</isActive>
                <label>Is not the decision maker</label>
            </value>
            <value>
                <fullName>No need</fullName>
                <isActive>false</isActive>
                <label>No need</label>
            </value>
            <value>
                <fullName>Not enough resources</fullName>
                <isActive>false</isActive>
                <label>Not enough resources</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>