force-app/main/default/objects/Lead/fields/Dropped_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Reason_Other__c</fullName>
    <label>Dropped Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>