force-app/main/default/objects/Lead/fields/Geburtstag__c.field-meta.xml
<CustomField>
    <fullName>Geburtstag__c</fullName>
    <label>Geburtstag</label>
    <type>Date</type>
</CustomField>