force-app/main/default/objects/Lead/fields/Hausnummer_parsed__c.field-meta.xml
<CustomField>
    <fullName>Hausnummer_parsed__c</fullName>
    <formula>RIGHT(
  Street,
  LEN(Street) - MIN(
    IF(FIND(&quot;0&quot;, Street) = 0, 999, FIND(&quot;0&quot;, Street)),
    IF(FIND(&quot;1&quot;, Street) = 0, 999, FIND(&quot;1&quot;, Street)),
    IF(FIND(&quot;2&quot;, Street) = 0, 999, FIND(&quot;2&quot;, Street)),
    IF(FIND(&quot;3&quot;, Street) = 0, 999, FIND(&quot;3&quot;, Street)),
    IF(FIND(&quot;4&quot;, Street) = 0, 999, FIND(&quot;4&quot;, Street)),
    IF(FIND(&quot;5&quot;, Street) = 0, 999, FIND(&quot;5&quot;, Street)),
    IF(FIND(&quot;6&quot;, Street) = 0, 999, FIND(&quot;6&quot;, Street)),
    IF(FIND(&quot;7&quot;, Street) = 0, 999, FIND(&quot;7&quot;, Street)),
    IF(FIND(&quot;8&quot;, Street) = 0, 999, FIND(&quot;8&quot;, Street)),
    IF(FIND(&quot;9&quot;, Street) = 0, 999, FIND(&quot;9&quot;, Street))
  ) + 1
)</formula>
    <label>Hausnummer</label>
    <type>Text</type>
</CustomField>