force-app/main/default/objects/Lead/fields/Konvertiert_am__c.field-meta.xml
<CustomField>
    <fullName>Konvertiert_am__c</fullName>
    <label>Konvertiert am</label>
    <type>Date</type>
</CustomField>