force-app/main/default/objects/Lead/fields/Letzte_Aktivitaet_Erstelldatum__c.field-meta.xml
<CustomField>
    <fullName>Letzte_Aktivitaet_Erstelldatum__c</fullName>
    <formula>IF(ISBLANK(LastActivityDate), DATEVALUE(CreatedDate), LastActivityDate)</formula>
    <label>Letzte Aktivität / Erstelldatum</label>
    <type>Date</type>
</CustomField>