force-app/main/default/objects/Lead/fields/RT_Name_Filter__c.field-meta.xml
<CustomField>
    <fullName>RT_Name_Filter__c</fullName>
    <formula>$RecordType.Name + &quot; - All&quot;</formula>
    <label>RT Name Filter</label>
    <type>Text</type>
</CustomField>