force-app/main/default/objects/Lead/fields/Sales_Kampagne__c.field-meta.xml
<CustomField>
    <fullName>Sales_Kampagne__c</fullName>
    <label>Sales-Kampagne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Kampagne</valueSetName>
    </valueSet>
</CustomField>