force-app/main/default/objects/Lead/fields/Source_Vortrag__c.field-meta.xml
<CustomField>
    <fullName>Source_Vortrag__c</fullName>
    <description>Pflichtfeld bei Lead-Quelle “Vortrag”. Genauere Details zur Veranstaltung.</description>
    <inlineHelpText>Pflichtfeld bei Lead-Quelle “Vortrag”: Bitte gib den genauen Veranstaltungsnamen und das Jahr der Veranstaltung an.</inlineHelpText>
    <label>Veranstaltung</label>
    <length>255</length>
    <type>Text</type>
</CustomField>