force-app/main/default/objects/Lead/fields/Stage_Tracking_CallPitchinVorbereitu_out__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tracking_CallPitchinVorbereitu_out__c</fullName>
    <label>Stage Tracking Call/Pitch in Vorbere out</label>
    <type>Date</type>
</CustomField>