force-app/main/default/objects/Lead/fields/Stage_Tracking_CallPitchinVorbereitun_in__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tracking_CallPitchinVorbereitun_in__c</fullName>
    <label>Stage Tracking Call/Pitch in Vorberei in</label>
    <type>Date</type>
</CustomField>