force-app/main/default/objects/Lead/fields/Stage_Tracking_ColdOutreach_in__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tracking_ColdOutreach_in__c</fullName>
    <label>Stage Tracking Cold Outreach in</label>
    <type>Date</type>
</CustomField>