force-app/main/default/objects/Lead/fields/Stage_Tracking_Dropped_out__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tracking_Dropped_out__c</fullName>
    <label>Stage Tracking Dropped out</label>
    <type>Date</type>
</CustomField>