force-app/main/default/objects/Lead/fields/Stage_Tracking_In_Kontakt_in__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tracking_In_Kontakt_in__c</fullName>
    <label>Stage Tracking In_Kontakt in</label>
    <type>Date</type>
</CustomField>