force-app/main/default/objects/Lead/fields/Stage_Tracking_In_Kontakt_out__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tracking_In_Kontakt_out__c</fullName>
    <label>Stage Tracking In_Kontakt out</label>
    <type>Date</type>
</CustomField>