force-app/main/default/objects/Lead/fields/Stage_Tracking_Postponed_in__c.field-meta.xml
<CustomField>
    <fullName>Stage_Tracking_Postponed_in__c</fullName>
    <label>Stage Tracking Postponed in</label>
    <type>Date</type>
</CustomField>