force-app/main/default/objects/Lead/fields/Weitere_Anmerkungen__c.field-meta.xml
<CustomField>
    <fullName>Weitere_Anmerkungen__c</fullName>
    <label>Briefing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>