force-app/main/default/objects/Lead/fields/Wiedervorlage_set_by_Flow__c.field-meta.xml
<CustomField>
    <fullName>Wiedervorlage_set_by_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wiedervorlage set by Flow</label>
    <type>Checkbox</type>
</CustomField>