force-app/main/default/objects/Lead/fields/Wiedervorlage_Status__c.field-meta.xml
<CustomField>
    <fullName>Wiedervorlage_Status__c</fullName>
    <label>Wiedervorlage Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In_Kontakt</fullName>
                <default>true</default>
                <label>In Kontakt</label>
            </value>
            <value>
                <fullName>Call/Pitch Follow Up</fullName>
                <label>Priorisiert</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>