force-app/main/default/objects/Lead/fields/XING_URL__c.field-meta.xml
<CustomField>
    <fullName>XING_URL__c</fullName>
    <label>XING URL</label>
    <type>Url</type>
</CustomField>