force-app/main/default/objects/Lead/recordTypes/Consulting.recordType-meta.xml
<RecordType>
    <fullName>Consulting</fullName>
    <active>true</active>
    <businessProcess>Consulting</businessProcess>
    <label>Consulting</label>
</RecordType>