force-app/main/default/objects/Lead/recordTypes/Immobilien.recordType-meta.xml
<RecordType>
    <fullName>Immobilien</fullName>
    <active>false</active>
    <businessProcess>Consulting</businessProcess>
    <label>Immobilien</label>
</RecordType>