force-app/main/default/objects/Lead/recordTypes/Reden.recordType-meta.xml
<RecordType>
    <fullName>Reden</fullName>
    <active>false</active>
    <businessProcess>Consulting</businessProcess>
    <label>Reden</label>
</RecordType>