force-app/main/default/objects/Lead/recordTypes/Tech.recordType-meta.xml
<RecordType>
    <fullName>Tech</fullName>
    <active>true</active>
    <businessProcess>Consulting</businessProcess>
    <label>Tech</label>
</RecordType>