force-app/main/default/objects/Lead/validationRules/Dropped_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Dropped_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Status, &apos;Dropped&apos;),
ISPICKVAL(Dropped_Reason__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Dropped_Reason__c</errorDisplayField>
    <errorMessage>Please specify Dropped Reason</errorMessage>
</ValidationRule>