force-app/main/default/objects/Lead/validationRules/Dropped_Reason_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Dropped_Reason_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Dropped_Reason__c, &apos;Other&apos;),
ISBLANK(Dropped_Reason_Other__c)
)</errorConditionFormula>
    <errorDisplayField>Dropped_Reason_Other__c</errorDisplayField>
    <errorMessage>Please specific Dropped Reason</errorMessage>
</ValidationRule>