force-app/main/default/objects/Lead/validationRules/Event_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL(LeadSource, &apos;Vortrag (nicht CK)&apos;),
ISPICKVAL(LeadSource, &apos;Vortrag&apos;)
),
ISBLANK(Source_Vortrag__c)
)</errorConditionFormula>
    <errorDisplayField>Source_Vortrag__c</errorDisplayField>
    <errorMessage>Bitte genaue Veranstaltung angeben</errorMessage>
</ValidationRule>