force-app/main/default/objects/Lead/listViews/ASP.listView-meta.xml
<ListView>
    <fullName>ASP</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LinkedIn_URL__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>XING_URL__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Importiert</value>
    </filters>
    <label>Prospecting</label>
</ListView>