force-app/main/default/objects/Lead/listViews/Leads_pro_User.listView-meta.xml
<ListView>
    <fullName>Leads_pro_User</fullName>
    <booleanFilter>(1 AND 2 AND (3 OR 4 OR 5)) OR (2 AND 6)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Cold Outreach,In_Kontakt</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notContain</operation>
        <value>scamp,nnied</value>
    </filters>
    <filters>
        <field>LEAD.LAST_ACTIVITY</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>LEAD.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:1</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Call/Pitch Follow Up</value>
    </filters>
    <label>Neue und priorisierte Leads pro User</label>
</ListView>