force-app/main/default/objects/Lead/listViews/Leads_Sebastian_Voigt_ESM.listView-meta.xml
<ListView>
    <fullName>Leads_Sebastian_Voigt_ESM</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Sales_Kampagne__c</field>
        <operation>equals</operation>
        <value>ESM</value>
    </filters>
    <label>Leads Sebastian Voigt - ESM</label>
</ListView>