force-app/main/default/objects/Lead/listViews/Meine_Leads_Voigt.listView-meta.xml
<ListView>
    <fullName>Meine_Leads_Voigt</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.ANNUAL_REVENUE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.EMPLOYEES</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>XING_URL__c</columns>
    <columns>LEAD.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Kampagne__c</field>
        <operation>equals</operation>
        <value>ESM</value>
    </filters>
    <label>Alle Leads</label>
</ListView>