force-app/main/default/objects/Lead/listViews/Meine_offenen_Leads.listView-meta.xml
<ListView>
    <fullName>Meine_offenen_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Importiert,Cold Outreach,Postponed,Dropped,Konvertiert</value>
    </filters>
    <label>Meine offenen Leads</label>
</ListView>